# mcard-core

./: .env.example  .env.template  .gitignore  .gitmodules  CHANGELOG.md  MIGRATION.md  README.md  TEMP_README  demo_db_storage.py  example.env  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_mcard_api_persistent.py  test_mcard_api_persistent.py.bak  test_mcard_api_standalone.py  test_mcard_api_standalone.py.bak  test_mcard_config_env.py  test_mcard_config_env.py.bak  tsconfig.json
@mcard_venv/: pyvenv.cfg
data/: ROOT_mcard_DOT_ENV_UPDATED.db-shm  ROOT_mcard_DOT_ENV_UPDATED.db-wal
data/cards/: archguide.html
data/xml/: Diagram.svg.xml
docs/: Functional Glue for AI-powered Knowledge Management and Agents  architecture.md  configuration.md  persistence.md  setup.md
examples/bridge_to_javascript/: .env.example  .eslintrc.js  .huskyrc.js  .prettierrc.js  .watchmanconfig  README.md  check_db.py  create_cards.py  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.js  setup-and-start.sh  test-report.xml  test_lifespan.py  test_server_startup.js
examples/bridge_to_javascript/coverage/: client.js.html  constants.js.html  coverage-summary.json  enhanced-client.js.html  example.js.html  index.html  lcov.info  mcard_service_clinic.js.html  mcard_service_proxy.js.html
examples/bridge_to_javascript/coverage/lcov-report/: client.js.html  constants.js.html  enhanced-client.js.html  example.js.html  index.html  mcard_service_clinic.js.html  mcard_service_proxy.js.html  setup.js.html  test-setup.js.html
examples/bridge_to_javascript/coverage/lcov-report/src/: client.js.html  index.html
examples/bridge_to_javascript/coverage/lcov-report/tests/: index.html  setup.js.html
examples/bridge_to_javascript/data/: mcard.db-shm  mcard.db-wal  mcard2.db-shm  mcard2.db-wal  test_mcard.db-shm  test_mcard.db-wal
examples/bridge_to_javascript/reports/: junit.xml
examples/bridge_to_javascript/scripts/: create_and_verify_card.js
examples/bridge_to_javascript/scripts/data/: mcard.db-shm  mcard.db-wal
examples/bridge_to_javascript/src/: ENHANCED_CLIENT_README.md  client.js  constants.js  enhanced-client.js  example.js  mcard_service_clinic.js  mcard_service_proxy.js  server.py  setup.py  types.ts
examples/bridge_to_javascript/tests/: ENHANCED_TESTS_README.md  README.md  client.consolidated.test.js  client.content.test.js  client.test.js  content.types.test.js  enhanced-client.test.js  env_file_existence.test.js  env_validation.test.js  error-handling.test.js  error_handling.test.js  initialization.test.js  list_cards.test.js  mcard_service_content.test.js  mcard_service_edge_cases.test.js  mcard_service_persistent.test.js  mcard_service_proxy.test.js  metrics.test.js  retry_cancellation.test.js  run-tests.js  server_connection.test.js  setup.js  test_server.py
examples/bridge_to_javascript/tests/config/: test-config.js
examples/bridge_to_javascript/tests/fixtures/: sample.xml
examples/bridge_to_javascript/tests/reports/: junit.xml
examples/bridge_to_javascript/tests/test_data/: sample.csv  sample.json  sample.md  sample.xml  sample.yaml
examples/bridge_to_javascript/tests/utils/: content_generators.js  global-setup.js  global-teardown.js  test-setup.js  test-utils.js
examples/standalone/: README.md  (+1 more)
js/: exampleUsage.js  mcardService.js
mcard/: __init__.py  collection.py  config.py  config_constants.py  content_type_interpreter.py  core.py  load_data.py  setup.py  storage.py
mcard_service/: api_service.py
results/: analysis_results.json  analysis_summary.json  test_summary.json
scripts/: cleanup_db.py  clear_cards.py  list_cards.py  load_all_cards.py  load_cards.py  update_config_refs.py  update_config_refs.py.bak  update_sqlite_refs.py  update_sqlite_refs.py.bak
tests/: .env.test  __init__.py  conftest.py  mcardService.test.js  test_api_service.py  test_collection.py  test_content_type_interpreter.py  test_database_operations.py  test_delete_records.py  test_env_loading.py  test_example_env_loading.py  test_load_data.py  test_mcard.py  test_performance.py  test_server.py  test_variety_of_card_content.py
(+299 files in other folders)
