[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[project]
name = "mcard-core"
version = "0.1.0"
description = "Core library for managing MCard collections"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["mcard"]
